kubernetes/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "blog.k3s.home"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-frontend-service
            port:
              number: 80
